maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:7: error: not enough arguments for method aMurNord: (x: Int, y: Int)Boolean.
Unspecified value parameters x, y.
	if(!aMurNord()){setIndication(x,y-1,getIndication(x,y)+1);indic(x,y-1)}
                    ^JediEscaper:8: error: not enough arguments for method aMurOuest: (x: Int, y: Int)Boolean.
Unspecified value parameters x, y.
	if(!aMurOuest()){setIndication(x-1,y,getIndication(x,y)+1);indic(x-1,y)}
                     ^