maze.lessons.maze.shortestpath.ShortestPathMaze.scala.code
override def run() {
var x = 0
var y = 0

def indic(a:Int,b:Int){
	if(!aMurNord()){setIndication(x,y-1,getIndication(x,y)+1);indic(x,y-1)}
	if(!aMurOuest()){setIndication(x-1,y,getIndication(x,y)+1);indic(x-1,y)}
	
}

    for(i <- 0 to getMondeLargeur -1){
    	x = i
    		if(aBiscuit(x,y)){ return (x,y)}
    		else{for(c <- 0 to getMondeHauteur - 1){
    			y = c    		}
    			if(aBiscuit(x,y)){ return (x,y)}
    		}
    }

setIndication(x,y,0)
indic(x,y)
    
}
